--- a/src/templates/app/booklet/inc/page.phtml
+++ b/src/templates/app/booklet/inc/page.phtml
@@ -2,7 +2,7 @@
     <div class="card card-custom card-sticky w-100">
         <div class="card-header">
             <div class="card-title">
-                <h2><?php echo __('app.booklet.step_page_' . $pageNum) ?></h2>
+                <h2><?php echo __('app.common.step_page') . ' ' . $pageNum ?></h2>
             </div>
         </div>
         <div class="card-body">
