--- a/src/templates/app/inc/footer/footer.phtml
+++ b/src/templates/app/inc/footer/footer.phtml
@@ -30,6 +30,7 @@
 <script src="/app/js/lib/jscolor.min.js<?php echo '?v=' . RESOURCES_VERSION ?>" type="text/javascript"></script>
 
 <script src="/app/js/i18n.js<?php echo '?v=' . RESOURCES_VERSION ?>" type="text/javascript"></script>
+<script src="/app/js/lib/jsoneditor.i18n.js<?php echo '?v=' . RESOURCES_VERSION ?>" type="text/javascript"></script>
 
 <!-- Traducciones importadas directamente en CA -->
 <?php if (__('app.js.lang.code') == 'ca'): ?>
