--- a/src/templates/app/product/list.phtml
+++ b/src/templates/app/product/list.phtml
@@ -21,6 +21,7 @@
 <th data-priority="3"><?= __ss('app.common.name') ?></th>
 <th data-priority="4"><?= __ss('app.entity.area') ?></th>
 <th data-priority="6"><?= __ss('app.entity.booklets') ?></th>
+<th data-priority="6"><?= __ss('app.entity.subproducts') ?></th>
 <th data-priority="7"><?= __ss('app.common.date_created.short') ?></th>
 <th></th>
 <th data-priority="1" class="text-center"></th>
