Referencias y recetarios actualizados.

--- a/src/templates/app/inc/header/sidebar.phtml
+++ b/src/templates/app/inc/header/sidebar.phtml
@@ -41,7 +41,7 @@
                 </li>
                 <!--end::Navbar item-->
                 <!--begin::Navbar item-->
-                <li class="nav-item py-1">
+                <li class="profile-allow profile-A nav-item py-1">
                     <!--begin::Navbar link-->
                     <a href="/app/subproducts" class="nav-link py-4 px-1 btn <?php App\Util\CommonUtils::checkActive($menu, App\Constant\App\MenuSection::MenuSubProduct, 'active'); ?>">
                         <?php $this->insert("inc/common/icon/product_1") ?>
