--- a/src/templates/app/booklet/list.phtml
+++ b/src/templates/app/booklet/list.phtml
@@ -28,11 +28,10 @@
     </select>
 </div>
 
-<div class="col-sm-6 col-xl-3">
+<div class="profile-allow profile-A col-sm-6 col-xl-3">
     <label class="form-label"><?= __('app.creator') ?></label>
     <select data-placeholder="<?php __ss('app.common.select_value') ?>" class="form-select form-select-sm datatables-column-search-filter kt-select2" data-col-name="creator_user_id">
         <option value=""></option>
-        <?php var_dump($fullnames); ?>
         <?php foreach ($data['users'] as $user) : ?>
             <option value="<?= $user['id'] ?>"><?= $user['fullname'] ?></option>
         <?php endforeach; ?>
