--- a/src/templates/app/recipe/list.phtml
+++ b/src/templates/app/recipe/list.phtml
@@ -19,11 +19,10 @@
     </select>
 </div>
 
-<div class="col-sm-6 col-xl-3">
+<div class="profile-allow profile-A col-sm-6 col-xl-3">
     <label class="form-label"><?= __('app.creator') ?></label>
     <select data-placeholder="<?php __ss('app.common.select_value') ?>" class="form-select form-select-sm datatables-column-search-filter kt-select2" data-col-name="creator_user_id">
         <option value=""></option>
-        <?php var_dump($fullnames); ?>
         <?php foreach ($data['users'] as $user) : ?>
             <option value="<?= $user['id'] ?>"><?= $user['fullname'] ?></option>
         <?php endforeach; ?>
@@ -50,5 +49,5 @@
 
 <?php $this->stop() ?>
 
-<?php $this->insert("inc/common/subheader", ['entity' => 'recipe', 'btnExport' => true, 'btnAdd' => true, 'menu' => $menu, 'breadcumb' => $breadcumb]); ?>
+<?php $this->insert("inc/common/subheader", ['entity' => 'recipe', 'btnExport' => true, 'btnAdd' => $_SESSION['user']['user_profile_id'] == \App\Constant\UserProfile::Administrator, 'menu' => $menu, 'breadcumb' => $breadcumb]); ?>
 <?php $this->insert('inc/common/datatable', ['entity' => 'recipe', 'columns' => $this->section('columns'), 'filters' => $this->section('filters')]); ?>
