Primera página de folletos, imagenes de productos y correcciones

--- a/src/templates/app/login/enter_password.phtml
+++ b/src/templates/app/login/enter_password.phtml
@@ -1,8 +1,8 @@
 <div class="login-form login-signin">
-    <div class="text-center text-white mb-10">
-        <a href="/"><img src="/app/img/logo-white.png?v=2" class="img-fluid mw-200px mw-sm-300px"></a>
-        <h3 class="text-white fs-1 fw-bold mt-10"><?php echo __('app.login.login') ?></h3>
-        <div class="text-white fs-7 fw-lighter px-10"><?php echo __('app.login.enter_password_text') ?></div>
+<div class="text-center text-dark mb-10">
+    <a href="/"><img src="/app/img/logo.png?v=2" class="img-fluid mw-200px mw-sm-300px"></a>
+        <h3 class="text-dark fs-1 fw-bold mt-10"><?php echo __('app.login.login') ?></h3>
+        <div class="text-dark fs-7 fw-lighter px-10"><?php echo __('app.login.enter_password_text') ?></div>
     </div>
 
     <form method="POST" class="form" id="login-enter-password" action="/app/public/enter_password" data-js="LoginEnterPasswordForm">
@@ -10,23 +10,23 @@
         <input type="hidden" name="token" value="<?php echo $data['token'] ?>"/>
 
         <div class="fv-row mb-10">
-            <label class="form-label fw-bold text-white fs-6"><?php echo __('app.login.password') ?></label>
+            <label class="form-label fs-6 fw-bold text-dark"><?php echo __('app.login.password') ?></label>
 
             <div class="input-icon-container">
-                <a href="javascript:;" class="input-icon show-password"><i class="las la-eye text-white show-icon"></i><i class="las la-eye-slash text-white hide-icon d-none"></i></a>
-                <input class="form-control form-control-lg form-control-solid bg-white bg-opacity-50 rounded-pill" type="password" name="password" required autocomplete="off" tabindex="1" />
+                <a href="javascript:;" class="input-icon show-password"><i class="ki-outline ki-eye text-dark show-icon"></i><i class="ki-outline ki-eye-slash text-dark hide-icon d-none"></i></a>
+                <input class="form-control form-control-lg form-control-solid bg-white border-primary rounded" type="password" name="password" required autocomplete="off" tabindex="1" />
             </div>
         </div>
 
         <div class="fv-row mb-10">
-            <label class="form-label fw-bold text-white fs-6"><?php echo __('app.login.repeat_password') ?></label>
+            <label class="form-label fs-6 fw-bold text-dark"><?php echo __('app.login.repeat_password') ?></label>
 
             <div class="input-icon-container">
-                <a href="javascript:;" class="input-icon show-password"><i class="las la-eye text-white show-icon"></i><i class="las la-eye-slash text-white hide-icon d-none"></i></a>
-                <input class="form-control form-control-lg form-control-solid bg-white bg-opacity-50 rounded-pill" type="password" name="password2" required autocomplete="off" tabindex="2" />
+                <a href="javascript:;" class="input-icon show-password"><i class="ki-outline ki-eye text-dark show-icon"></i><i class="ki-outline ki-eye-slash text-dark hide-icon d-none"></i></a>
+                <input class="form-control form-control-lg form-control-solid bg-white border-primary rounded" type="password" name="password2" required autocomplete="off" tabindex="2" />
             </div>
         </div>
 
-        <button type="submit" id="kt_login_enter_password_submit" class="btn btn-white w-100 rounded-pill mb-3"><?php echo __('app.login.password_send') ?></button>
+        <button type="submit" id="kt_login_enter_password_submit" class="btn btn-primary w-100 rounded"><?php echo __('app.login.password_send') ?></button>
     </form>
 </div>
