--- a/src/templates/app/pdf/booklet/booklet.phtml
+++ b/src/templates/app/pdf/booklet/booklet.phtml
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style>
+        .page-1,
         .page-2,
         .page-3 {
             page-break-after: always;
@@ -14,7 +15,8 @@
             margin: 0;
         }
 
-        .product {
+        .product,
+        .bg-image {
             position: fixed;
             /* border: 1px solid red; */
         }
@@ -57,7 +59,8 @@
             right: 50px;
         }
 
-        .product img {
+        .product img,
+        .bg-image img {
             width: 100%;
             height: 100%;
         }
@@ -85,14 +88,19 @@ $layouts[3] = ['6_1', '6_2', '3_2', '3_3']; // 1/3x2 + 1/3 + 1/3
 $layouts[4] = ['6_1', '6_2', '6_3', '6_4', '3_3']; // 1/3x2 + 1/3x2 + 1/3
 $layouts[5] = ['6_1', '6,2', '3_2', '6_5', '6_6']; // 1/3x2 + 1/3 + 1/3x2
 $layouts[6] = ['6_1', '6_2', '6_3', '6_4', '6_5', '6_6']; // 1/3x2 + 1/3x2 + 1/3x2
-$layouts[7] = ['3_1', '6_2', '3_2', '3_3']; // 1/3 + 1/3x2 + 1/3
-$layouts[8] = ['3_1', '6_2', '6_3', '6_4', '6_5', '6_6']; // 1/3 + 1/3x2 + 1/3x2
+$layouts[7] = ['3_1', '6_3', '6_4', '3_3']; // 1/3 + 1/3x2 + 1/3
+$layouts[8] = ['3_1', '6_3', '6_4', '6_5', '6_6']; // 1/3 + 1/3x2 + 1/3x2
 $layouts[9] = ['3_1', '3_2', '6_5', '6_6']; // 1/3 + 1/3 + 1/3x2
 
 ?>
 
 
 <body>
+    <div class="page-1">
+        <div class="bg-image">
+            <img src='<?php echo $booklet['pages'][1]['image'] ?>'>
+        </div>
+    </div>
     <?php for ($page = 2; $page <= 4; $page++): ?>
         <div class="page-<?php echo $page ?>">
             <?php $currentLayout = $booklet['page' . $page . '_booklet_layout_id']; ?>
