--- a/src/templates/app/inc/header/head.phtml
+++ b/src/templates/app/inc/header/head.phtml
@@ -10,7 +10,7 @@
     <base href="../">
     <?php $this->insert("inc/security/csrf_meta", compact('csrf')) ?>
     <meta charset="utf-8" />
-    <title><?php echo $params['PROJECT_NAME'] ?><?php echo !empty($title) ? ' ' . $title : '' ?></title>
+    <title><?php echo $params['PROJECT_NAME'] ?><?php echo !empty($title) ? ' | ' . $title : '' ?></title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
