Correción no se ven imagenes folleto en firefox, idioma qr por defecto en usuario

--- a/src/templates/app/booklet/form.phtml
+++ b/src/templates/app/booklet/form.phtml
@@ -4,7 +4,8 @@
     data-js="BookletForm"
     action="/app/booklet/save/<?php echo \App\Constant\App\FormSaveMode::SaveAndContinue ?>"
     method="post"
-    autocomplete="off">
+    autocomplete="off"
+    data-default-market-id="<?php echo !empty($data['default_market_id']) ? $data['default_market_id'] : '' ?>">
     <?php
     $this->insert(
         "inc/common/subheader",
@@ -76,8 +77,7 @@
                                     <select name="main_language_id" data-control="select2" data-placeholder="<?php echo __('app.common.select_value') ?>" class="form-select kt-select2" required>
                                         <option disabled selected value> <?php echo __('app.common.select_value') ?> </option>
                                         <?php foreach ($data['main_languages'] as $lang): ?>
-                                            <option value="<?php echo $lang['id'] ?>"
-                                                <?php echo (!empty($data['default_main_language']) && $lang['id'] == $data['default_main_language']) ? 'selected' : '' ?>>
+                                            <option value="<?php echo $lang['id'] ?>">
                                                 <?php echo __($lang['name']) ?>
                                             </option>
                                         <?php endforeach; ?>
