--- a/src/templates/app/pdf/booklet/booklet.phtml
+++ b/src/templates/app/pdf/booklet/booklet.phtml
@@ -37,26 +37,15 @@
         }
 
         .qr {
-            width: 100px;
-            height: 100px;
+            width: 66px;
+            height: 66px;
             position: absolute;
             z-index: 9999999;
             bottom: 100px;
-        }
-
-        .position-2 .qr {
-            bottom: 50px;
-            right: 50px;
-        }
-
-        .position-3 .qr {
-            bottom: 50px;
-            right: 50px;
-        }
-
-        .position-6 .qr {
-            bottom: 50px;
-            right: 50px;
+            padding: 5px;
+            background-color: white;
+            bottom: 30px;
+            right: 30px;
         }
 
         .product img,
