--- a/src/templates/app/product/form.phtml
+++ b/src/templates/app/product/form.phtml
@@ -46,6 +46,7 @@
                                 </option>
                             <?php endforeach; ?>
                         </select>
+                        <div class="form-text"><?php echo __('app.common.select_multiple_info') ?></div>
                     </div>
                 </div>
                 <div class="col-md-4">
