--- a/src/templates/app/inc/footer/footer.phtml
+++ b/src/templates/app/inc/footer/footer.phtml
@@ -7,6 +7,7 @@
 <script>
     PASSWORD_COMPLEX = <?php echo $params['PASSWORD_COMPLEX'] == '0' ? 'false' : 'true' ?>;
     PIN_LENGTH = <?php echo $params['PIN_LENGTH'] ?>;
+    EMPTY_PRODUCT = <?php echo $params['EMPTY_PRODUCT'] ?>;
 </script>
 
 <!--begin::Global Theme Bundle(used by all pages) -->		
