--- a/src/templates/app/pdf/booklet/booklet.phtml
+++ b/src/templates/app/pdf/booklet/booklet.phtml
@@ -97,9 +97,11 @@ $layouts[9] = ['3_1', '3_2', '6_5', '6_6']; // 1/3 + 1/3 + 1/3x2
                 <?php $currentPosition = $layouts[$currentLayout][$i]; ?>
                 <?php $position = $positions[$currentPosition] ?>
                 <div class="product position-<?php echo $currentPosition[0] ?>" style="top: <?php echo $position['y'] ?>; left: <?php echo $position['x'] ?>">
-                    <div class="qr">
-                        <img src='<?php echo $product['qr']; ?>'>
-                    </div>
+                    <?php if(!empty($product['qr'])): ?>
+                        <div class="qr">
+                            <img src='<?php echo $product['qr']; ?>'>
+                        </div>
+                    <?php endif; ?>
                     <img src='<?php echo $product['image'] ?>'>
                 </div>
             <?php endforeach; ?>
